# rtmidi-rs

./: Cargo.toml  build.rs  wrapper.h
src/: ffi.rs  midi.rs  midi_in.rs
